[package]
name = "rustp2p"
version = "0.1.0"
authors = ["Lucas Baes <lucasfranchinibaes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.2", features = ["blocking", "json"] }
futures = "0.3"
tokio = "0.2.23"
dotenv = "0.14"
